<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_three"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/last_two"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/top_bar">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="@style/BorderlessButtonGuessingGame"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2"
            style="@style/BorderlessButtonGuessingGame"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3"
            style="@style/BorderlessButtonGuessingGame"
            android:text="@string/three" />


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>